# spginfo

./: CMakeLists.txt  Makefile  arrayutil.f90  build.sh  cmdpath.f90  config.sh  constants.f90  error.f90  fileutil.f90  install.sh  main.f90  math_util.f90  spginfo.f90  strutil.f90  syminfo.lib  symm_table.f90  unit_cell.f90
cmake/Modules/: SetFortranFlags.cmake
src/: CMakeLists.txt  error.F90  fileutil.F90  fract.f90  lsqutil.F90  main.f90  math_util.F90  program.f90  spginfo.f90  strutil.f90  symm_table.f90  unit_cell.f90
